# libCCR

./: Makefile.in  Makefile.inc.in  README.md  cc_buf.h  cc_confirm.c  cc_debug.c  cc_debug.h  cc_debug_internal.h  cc_dsk.h  cc_fmt.c  cc_fmt.h  cc_fmt_char.c  cc_fmt_crlf.c  cc_fmt_int.c  cc_fmt_signed.h  cc_fmt_sint08.c  cc_fmt_sint16.c  cc_fmt_sint32.c  cc_fmt_sint64.c  cc_fmt_string.c  cc_fmt_uchar.c  cc_fmt_uint.c  cc_fmt_uint08.c  cc_fmt_uint64.c  cc_fmt_ulong.c  cc_fmt_unsigned.h  cc_forcefork.c  cc_forcefork.h  cc_log.c  cc_log.h  cc_log_syslog.c  cc_machdep.h.in-001  cc_machdep.h.in-generated  cc_machdep.h.in-model  cc_machdep.h.in.bck  cc_memory.h  cc_options.c  cc_options.h  cc_path.h  cc_path_abs.c  (+15 more)
src/: Makefile.in  cc_confirm.c  cc_confirm.h  cc_debug_memdup.c  cc_debug_print.c  cc_dsk_getsize.c  cc_fmt.h  cc_fmt_bytes.c  cc_fmt_date.c  cc_fmt_doc.c  cc_fmt_fmt.c  cc_fmt_hexdump.c  cc_fmt_internal.h  cc_fmt_long.c  cc_fmt_short.c  cc_fmt_sint08.c  cc_fmt_sint16.c  cc_fmt_sint32.c  cc_fmt_sint64.c  cc_fmt_sintXX.h  cc_fmt_ubytes.c  cc_fmt_uint16.c  cc_fmt_uint32.c  cc_fmt_uint64.c  cc_fmt_uintXX.h  cc_fmt_ushort.c  cc_in.h  cc_log.h  cc_log_file.c  cc_machdep.h.in  cc_memory.c  cc_nextopt.c  cc_nextopt.h  cc_path.c  cc_path_info.c  cc_path_make.c  cc_pidfile.h  cc_random.c  cc_random.h  cc_src_warning.c  (+6 more)
